# llm-tools-readonly-fs

./: CLAUDE.md  README.md  llm_tools_readonly_fs.py  pyproject.toml
.github/workflows/: ci.yaml  publish.yaml
src/llm_tools_readonly_fs/: __init__.py  llm_tools_readonly_fs.py
tests/: test_llm_tools_readonly_fs.py
