[project]
name = "llm-tools-readonly-fs"
version = "0.1.0"
description = "Grants LLM the ability to glob, grep, and view files within a directory"
readme = "README.md"
authors = [{name = "Brett Harvey"}]
license = "MIT"
classifiers = []
requires-python = ">=3.9"
dependencies = [
    "llm>=0.26",
    "readonly-fs-tools>=0.2.0",
]

[project.urls]
Homepage = "https://github.com/rbharvs/llm-tools-readonly-fs"
Changelog = "https://github.com/rbharvs/llm-tools-readonly-fs/releases"
Issues = "https://github.com/rbharvs/llm-tools-readonly-fs/issues"
CI = "https://github.com/rbharvs/llm-tools-readonly-fs/actions"

[build-system]
requires = ["uv_build>=0.6.6,<0.7"]
build-backend = "uv_build"

[project.entry-points.llm]
llm_tools_readonly_fs = "llm_tools_readonly_fs.llm_tools_readonly_fs"

[tool.ruff]
src = ["src", "tests"]

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.lint.isort]
combine-as-imports = true

[dependency-groups]
dev = [
    "llm-echo>=0.3a1",
    "pytest>=8.4.1",
    "ruff>=0.12.0",
]
